# event-camera-ws

./: .gitattributes  .gitignore  README.md  settings.json
calibration/: calibration.yml
ext-src/: calibration.py  recorder.py
ext-src/e2calib/: .gitignore  LICENSE  README.md  data.h5  pedestrians.hdf5  pedestrians_cd.h5  recording_260601_114354.h5  recording_260601_114354.raw  recording_260601_114354.raw.tmp_index  requirements.txt
ext-src/e2calib/python/: convert.py  extract_triggers_prophesee.py  images_to_rosbag.py  offline_reconstruction.py  setup.py  test_provider.py
src/bias_tuner/: package.xml  setup.cfg  setup.py
src/bias_tuner/bias_tuner/: bias_tuner.py
src/event_camera_renderer/: .clang-format  .gitignore  CMakeLists.txt  README.md  event_camera_renderer.repos  package.xml
src/event_camera_renderer/launch/: renderer.launch.py  renderer_composable.launch.py
src/event_camera_renderer/src/: display.cpp  renderer.cpp  renderer_node.cpp  ros_compat.cpp  sharp_display.cpp  time_slice_display.cpp
src/event_camera_tools/: CMakeLists.txt  README.md  package.xml
src/event_camera_tools/cmake/: ROS1.cmake  ROS2.cmake
src/event_camera_tools/src/: bag_to_raw_ros1.cpp  bag_to_raw_ros2.cpp  echo_ros1.cpp  echo_ros2.cpp  event_rate.cpp  event_statistics.cpp  find_trigger_events_ros2.cpp  movie_maker_ros1.cpp  (+8 more)
src/metavision_driver/: .clang-format  .flake8.ini  .gitignore  CMakeLists.txt  README.md  nodelet_plugins.xml  package.xml
src/rosbag2/: .gitignore  NOTICE  README.md
src/rosbag2_composable_recorder/: CMakeLists.txt  README.md  package.xml
(+477 files in other folders)
