<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>bias_tuner</name>
  <version>0.0.0</version>
  <description>Simple bias tuner for use with the ros_metavision_driver package</description>
  <maintainer email="favoringbasil55@gmail.com">locobot</maintainer>
  <license>Apache-2.0</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <depend>libopencv-dev</depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>rcl_interfaces</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
